--- a/!_lessons/01.md
+++ b/!_lessons/01.md
@@ -5,7 +5,7 @@
   `npm -v`  
   `ng --version`
 
-- Создаем angular проект с помощью флагов, которые добавят роутинг, sass и уберут тесты:  
+- Создаем angular проект 'ngrx-lessons' с помощью флагов, которые добавят роутинг, sass и уберут тесты:  
   `ng new ngrx-lessons --routing=true --style=sass --skipTests=true`
 
 - Запускаем проект на http://localhost:4200:  
