--- a/!_lessons/02.md
+++ b/!_lessons/02.md
@@ -1,6 +1,6 @@
 ## Создание страницы регистрации
 
-### Создание auth-модуля
+### 1. Создание auth-модуля
 
 Создаем файл _src\app\auth\auth.module.ts_, внутри которого создаем базовую структуру, которая должна существовать в каждом новом модуле:
 
@@ -13,12 +13,9 @@ import { CommonModule } from "@angular/common";
 export class AuthModule {}
 ```
 
-### Регистрация auth-модуля внутри app-модуля:
+### 2. Регистрация auth-модуля внутри app-модуля:
 
-Регистрируем auth.module.ts внутри app.module.ts. Для этого:
-
-- импортим auth.module
-- добавляем auth.module в массив imports
+Регистрируем auth.module.ts внутри app.module.ts:
 
 ```js
 import { AuthModule } from "./auth/auth.module";
@@ -28,7 +25,7 @@ import { AuthModule } from "./auth/auth.module";
 export class AppModule {}
 ```
 
-### Создание register-компонента внутри модуля auth
+### 3. Создание register-компонента внутри модуля auth
 
 Создаем компоненту `src\app\auth\components\register\`, внутри которой создаем файлы: `register.component.ts, register.component.html, register.component.sass`  
 Внутри register.component.ts создаем базовую структуру, которая должна существовать в каждом новом компоненте:
@@ -45,12 +42,9 @@ export class RegisterComponent {}
 
 Здесь стоит отметить, что строка `selector: 'nl-register'` содержит имя селектора с префиксом `nl`, что является сокращением от названия нашего приложения `ngrx-lessons`
 
-### Регистрация компонента внутри модуля:
+### 4. Регистрация register-компонента внутри auth-модуля:
 
 Компоненты необходимо зарегистрировать в модуле, которому они принадлежат. Переходим в auth.module.ts и выполняем следующее:
-
-- импортим register.component
-- регистрируем register.component в поле declarations
 
 ```js
 import { RegisterComponent } from './components/register/register.component';
@@ -59,7 +53,7 @@ import { RegisterComponent } from './components/register/register.component';
 })
 ```
 
-### Регистрация роута register-компонента внутри его родителя - auth-модуля
+### 5. Регистрация роута register-компонента внутри его родителя - auth-модуля
 
 Внутри auth.module.ts:
 
@@ -77,7 +71,7 @@ const routes: Routes = [
 })
 ```
 
-### Рендер страниц с помощью router-outlet
+### 6. Рендер страниц с помощью router-outlet
 
-router-outlet позволяет рендерить страницы. Для этого в app.component.html помещаем следующее:
+router-outlet позволяет рендерить страницы. Для этого в app.component.html помещаем следующее:  
 `<router-outlet></router-outlet>`
