--- a/!_lessons/02. Создание страницы регистрации.md
+++ b/!_lessons/02. Создание страницы регистрации.md
@@ -1,4 +1,4 @@
-## Создание страницы регистрации
+## 02. Создание страницы регистрации
 
 ### 1. Создание auth-модуля
 
@@ -22,7 +22,6 @@ import { AuthModule } from "./auth/auth.module";
 @NgModule({
   imports: [AuthModule],
 })
-export class AppModule {}
 ```
 
 ### 3. Создание register-компонента внутри модуля auth
@@ -44,7 +43,7 @@ export class RegisterComponent {}
 
 ### 4. Регистрация register-компонента внутри auth-модуля:
 
-Компоненты необходимо зарегистрировать в модуле, которому они принадлежат. Переходим в auth.module.ts и выполняем следующее:
+Компоненты необходимо зарегистрировать в модуле, которому они принадлежат. Внутри auth.module.ts:
 
 ```js
 import { RegisterComponent } from './components/register/register.component';
