--- a/!_lessons/02. Создание страницы регистрации.md
+++ b/!_lessons/02. Создание страницы регистрации.md
@@ -60,10 +60,8 @@ import { RegisterComponent } from './components/register/register.component';
 import { Routes, RouterModule } from '@angular/router';
 import { RegisterComponent } from './components/register/register.component';
 const routes: Routes = [
-  {
-    path: 'register',
-    component: RegisterComponent,
-  },
+  { path: '', pathMatch: 'full', redirectTo: 'register' },
+  { path: 'register', component: RegisterComponent },
 ];
 @NgModule({
   imports: [RouterModule.forChild(routes)],
@@ -72,5 +70,9 @@ const routes: Routes = [
 
 ### 6. Рендер страниц с помощью router-outlet
 
-router-outlet позволяет рендерить страницы. Для этого в app.component.html помещаем следующее:  
-`<router-outlet></router-outlet>`
+router-outlet позволяет рендерить страницы. Для этого в app.component.html помещаем следующее:
+
+```html
+<a routerLink="/register" routerLinkActive="active">1. Register page</a> <br />
+<router-outlet></router-outlet>
+```
