--- a/!_lessons/04. Добавление store-devtools.md
+++ b/!_lessons/04. Добавление store-devtools.md
@@ -24,9 +24,9 @@ import { environment } from '../environments/environment';
 })
 ```
 
-## Установка расширения 'Redux DevTools' в Chrome-браузер
+## Установка расширения 'Redux DevTools' в Chrome-браузер для отладки приложения
 
-Теперь, если перейти во вкладку 'devtools --> state' мы увидим пустой объект:
+Теперь, если перейти во вкладку 'devtools --> state --> raw' мы увидим пустой объект:
 ```js
 {}
 ```
