--- a/!_lessons/05. Установка schematics.md
+++ b/!_lessons/05. Установка schematics.md
@@ -1,4 +1,4 @@
-### 05. Установка schematics
+## 05. Установка schematics
 
 *Schematics* - предоставляет команды Angular CLI для создания файлов при создании новых фич NgRx и при расширении существующих.   
 
@@ -19,6 +19,6 @@
 {
   "cli": {
     "defaultCollection": "@ngrx/schematics"
-	}
+  }
 }
 ```
