--- a/!_lessons/06. Добавление ngrx-store в auth.module.md
+++ b/!_lessons/06. Добавление ngrx-store в auth.module.md
@@ -1,4 +1,4 @@
-### 06. Добавление ngrx-store в auth.module
+## 06. Добавление ngrx-store в auth.module
 
 `ng generate store auth/Auth --module auth.module.ts`
 
