--- a/!_lessons/08. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/08. Создание сервиса для обращения к серверу.md
@@ -33,7 +33,7 @@ export class AuthService {
 }
 ```
 
-Создаем модель Users `src\app\auth\model\users.model.ts`
+- Создаем модель Users `src\app\auth\model\users.model.ts`
 ```js
 export interface Users {
 	id: string;
@@ -41,7 +41,7 @@ export interface Users {
 }
 ```
 
-Добавляем в `src\app\auth\components\login\login.component.ts` обращение к сервису auth.service:
+- Добавляем в `src\app\auth\components\login\login.component.ts` обращение к сервису auth.service:
 ```js
 import { AuthService } from "../../auth.service";
 import { Users } from "../../model/users.model";
@@ -74,7 +74,7 @@ export class LoginComponent {
 	}
 ```
 
-Добавляем в `src\app\app.module.ts`:
+- Добавляем в `src\app\app.module.ts`:
 ```js
 import { HttpClientModule } from '@angular/common/http';
 @NgModule({
@@ -85,7 +85,7 @@ import { HttpClientModule } from '@angular/common/http';
 })
 ```
 
-Добавляем в `src\app\auth\auth.module.ts`:
+- Добавляем в `src\app\auth\auth.module.ts`:
 ```js
 import { ModuleWithProviders } from '@angular/core';
 import { AuthService } from "./auth.service";
