--- a/!_lessons/07. Создание login формы.md
+++ b/!_lessons/07. Создание login формы.md
@@ -18,8 +18,8 @@ import { ReactiveFormsModule } from "@angular/forms";
 	<input type="email" placeholder="Email"
 		formControlName="email"
 	>
-	<input type="password" placeholder="Password"
-		formControlName="password"
+	<input type="id" placeholder="Id"
+		formControlName="id"
 	>
 	<button (click)="login()"
 		[disabled]="!form.valid"
@@ -38,8 +38,8 @@ export class LoginComponent {
 		private fb: FormBuilder,		
 	) {
 		this.form = fb.group({
-			email: ['test@test.com', [Validators.required, Validators.email]],
-			password: ['test', [Validators.required, Validators.minLength(3), Validators.maxLength(5)]]
+			email: ['Lucio_Hettinger@annie.ca', [Validators.required, Validators.email]],
+			id: ['5', [Validators.required, Validators.minLength(1), Validators.maxLength(1)]]
 		});
 	}
 
