--- a/!_lessons/08. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/08. Создание сервиса для обращения к серверу.md
@@ -1,53 +1,62 @@
 ## 08. Создание сервиса для обращения к серверу
 
-После того, как пользователь заполнил форму, необходимо выполнить запрос к серверу, который отдаст нам список пользователей.    
+После того, как пользователь заполнил форму, необходимо выполнить запрос к серверу, который отдаст нам информацию о пользователе.    
 Чтобы выполнить данный запрос, необходимо создать сервис auth.service.    
-Ниже показано, какие файлы необходимо модифицировать или создать для этой задачи.
+Ниже показано, какие файлы необходимо модифицировать или создать выполнения для этой задачи.
 
 - Создаем сервис для работы с сервером `src\app\auth\auth.service.ts`:
 ```js
 import { Injectable } from "@angular/core";
 import { HttpClient } from "@angular/common/http";
 import { Observable } from "rxjs";
-import { Users } from "./model/users.model";
+import { IUsers } from "./model/users.model";
+import { IUsers_back } from "./model/users.model";
 import { map } from 'rxjs/operators';
 
 @Injectable()
 export class AuthService {
 	constructor(private http: HttpClient) {}
 
-	getData(email: string, password: string): Observable<Users[]> {
-		// В данном примере параметры email и password не используются
+	getData(email: string, id: string): Observable<IUsers> {
+		return this.http.get<IUsers_back>(`https://jsonplaceholder.typicode.com/users/${id}`)
 
-		return this.http.get<Users[]>('https://jsonplaceholder.typicode.com/users')
-
-			// Избавляемся от ненужных полей и приводим полученные объекты в соответствие с моделью Users
 			.pipe(
 				map(data => {
-					return data.map((user: any) => {
-						return {id: user.id, name: user.username};
-					});
+					// Если почта, которую ввел юзер, не соответствует почте, что пришла в ответе сервера - метод возвратит undefined
+					if (email === data.email) {
+						// Избавляемся от ненужных полей и приводим полученный объект в соответствие с интерфейсом IUsers
+						return { index: data.id, name: data.username, mail: data.email }
+					}
 			}))
-
 	}
 }
 ```
 
-- Создаем модель Users `src\app\auth\model\users.model.ts`
+- Создаем модели `src\app\auth\model\users.model.ts`
 ```js
-export interface Users {
-	id: string;
+// Cвойства в объекте, который возвращает метод getData в 'src\app\auth\auth.service.ts'
+export interface IUsers {
+	index: string;
 	name: string;
+	mail: string;
+}
+
+// Cвойства в объекте, который пришел от сервера
+export interface IUsers_back {
+	id: string;
+	username: string;
+	email: string;
 }
 ```
 
 - Добавляем в `src\app\auth\components\login\login.component.ts` обращение к сервису auth.service:
 ```js
 import { AuthService } from "../../auth.service";
-import { Users } from "../../model/users.model";
+import { IUsers } from "./model/users.model";
+import { tap } from "rxjs/operators";
 
 export class LoginComponent {
-	users: Users[] = [];
+	user: IUsers;
 
 	constructor(	
 		private auth: AuthService,	
@@ -56,21 +65,22 @@ export class LoginComponent {
 	login() {
 		const val = this.form.value;
 
-		// email и password, которые ввел пользователь, должны отправляться на сервер.
-		// Сервер должен проверять их и отдавать необходимые нам данные.
-		// Но в нашем примере эта проверка будет сэмулирована внутри данного метода и,
-		// если она успешна, мы выполним обращение к сервису, который запросит у сервера данные,
-		// без использования email и password
-
-		if (val.email !== 'test@test.com' || val.password !== 'test') {
-			console.log('Wrong user data');
-			return;
-		}
-
-		this.auth.getData(val.email, val.password)
-			.subscribe((users) => {
-				this.users = users;
-			});
+		this.auth.getData(val.email, val.id)
+			.pipe(
+				// tap() используется для выполнения какого-либо действия; не изменяет исходного значения
+				tap(user => {
+					if (!user) throw new Error;
+				})
+			)
+			.subscribe(
+				(users) => {
+					this.user = users;
+				},
+				// Обработчик ошибки сработает в 2х случаях:
+				// - если юзер ввел некоректный id
+				// - если почта, которую ввел юзер, не соответствует почте, что пришла в ответе сервера
+				() => alert('Login Failed')
+			);
 	}
 ```
 
