--- a/!_lessons/02. Создание страницы авторизации.md
+++ b/!_lessons/02. Создание страницы авторизации.md
@@ -53,12 +53,11 @@ import { LoginComponent } from './components/login/login.component';
 ```js
 import { Routes, RouterModule } from '@angular/router';
 import { LoginComponent } from './components/login/login.component';
-const routes: Routes = [
-  { path: '', pathMatch: 'full', redirectTo: 'login' },
-  { path: 'login', component: LoginComponent },
+const authRoutes: Routes = [
+  { path: '', component: LoginComponent },
 ];
 @NgModule({
-  imports: [RouterModule.forChild(routes)],
+  imports: [RouterModule.forChild(authRoutes)],
 })
 ```
 
