--- a/!_lessons/09. Переход на страницу courses.md
+++ b/!_lessons/09. Переход на страницу courses.md
@@ -1,36 +1,36 @@
-## 09. Переход на страницу courses
+## 09. Переход на страницу posts
 
-После успешного выполнения запроса к серверу с помощью `auth.service`, мы получаем учетные данные пользователя: {index: 5, name: "Kamren", mail: "Lucio_Hettinger@annie.ca"}. Далее нам необходимо реализовать переход на страницу `courses`. Для этого нужно создать модуль **courses**:
+После успешного выполнения запроса к серверу с помощью `auth.service`, мы получаем учетные данные пользователя: {index: 5, name: "Kamren", mail: "Lucio_Hettinger@annie.ca"}. Далее нам необходимо реализовать переход на страницу `posts`. Для этого нужно создать модуль **posts**:
 
-### 1. Создание courses-модуля
+### 1. Создание posts-модуля
 
-Создаем файл _src\app\courses\courses.module.ts_, внутри которого регистрируем HomeComponent, который нам еще предстоит создать внутри данного модуля, и настраиваем роутинг:
+Создаем файл _src\app\posts\posts.module.ts_, внутри которого регистрируем HomeComponent, который нам еще предстоит создать внутри данного модуля, и настраиваем роутинг:
 ```js
 import { NgModule } from '@angular/core';
 import { CommonModule } from '@angular/common';
 import { HomeComponent } from './components/home/home.component';
 import { RouterModule, Routes } from '@angular/router';
 
-const coursesRoutes: Routes = [
+const postsRoutes: Routes = [
   { path: '', component: HomeComponent }
 ];
 
 @NgModule({
 	imports: [
 		CommonModule,
-		RouterModule.forChild(coursesRoutes)
+		RouterModule.forChild(postsRoutes)
 	],
 	declarations: [HomeComponent],
 })
-export class CoursesModule {
+export class PostsModule {
 }
 ```
 
-### 2. Реализация lazy-роутинга для courses-модуля внутри app-модуля:
+### 2. Реализация lazy-роутинга для posts-модуля внутри app-модуля:
 
 ```js
 const routes: Routes = [
-	{ path: 'courses', loadChildren: () => import('./courses/courses.module').then(m => m.CoursesModule) },
+	{ path: 'posts', loadChildren: () => import('./posts/posts.module').then(m => m.PostsModule) },
 	
 	// Если задан неизвестный путь - перенаправить к '/'
 	{ path: '**', redirectTo: '/' }
@@ -42,9 +42,9 @@ const routes: Routes = [
 })
 ```
 
-### 3. Создание home-компонента внутри модуля courses
+### 3. Создание home-компонента внутри модуля posts
 
-Создаем компоненту `src\app\courses\components\home\`, внутри которой создаем файлы: `home.component.ts, home.component.html, home.component.sass`  
+Создаем компоненту `src\app\posts\components\home\`, внутри которой создаем файлы: `home.component.ts, home.component.html, home.component.sass`  
 Внутри home.component.ts создаем базовую структуру, которая должна существовать в каждом новом компоненте:
 ```js
 import { Component } from "@angular/core";
