--- a/!_lessons/08. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/08. Создание сервиса для обращения к серверу.md
@@ -32,7 +32,7 @@ export class AuthService {
 }
 ```
 
-- Создаем модели `src\app\auth\model\users.model.ts`
+- Создаем модели `src\app\auth\model\users.model.ts`:
 ```js
 // Cвойства в объекте, который возвращает метод getData в 'src\app\auth\auth.service.ts'
 export interface IUsers {
