--- a/!_lessons/09. Переход на страницу posts.md
+++ b/!_lessons/09. Переход на страницу posts.md
@@ -26,7 +26,7 @@ export class PostsModule {
 }
 ```
 
-### 2. Реализация lazy-роутинга для posts-модуля внутри app-модуля:
+### 2. Реализация lazy-роутинга для posts-модуля внутри app-модуля
 
 ```js
 const routes: Routes = [
