--- a/!_lessons/10. Отображение данных на странице posts.md
+++ b/!_lessons/10. Отображение данных на странице posts.md
@@ -35,7 +35,7 @@ export interface IPost {
 
 ### 3. Подключение posts.service в posts.module
 
-_src\app\posts\posts.module.ts_:
+Добавляем в _src\app\posts\posts.module.ts_:
 
 ```js
 import { PostsService } from "./posts.service";
@@ -48,7 +48,7 @@ import { PostsService } from "./posts.service";
 
 ### 4. Обращение к posts.service из home.component
 
-_src\app\posts\components\home\home.component.ts_:
+Добавляем в _src\app\posts\components\home\home.component.ts_:
 ```js
 import { PostsService } from '../../posts.service';
 import { Observable } from "rxjs";
@@ -78,7 +78,7 @@ export class HomeComponent {
 
 ### 5. Отображение постов в home.component
 
-_src\app\posts\components\home\home.component.html_:
+Добавляем в _src\app\posts\components\home\home.component.html_:
 ```html
 <div *ngFor='let x of allPosts$  | async'>
 	<hr>
