--- a/!_lessons/04. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/04. Создание сервиса для обращения к серверу.md
@@ -1,8 +1,7 @@
-## 08. Создание сервиса для обращения к серверу
+## 04. Создание сервиса для обращения к серверу
 
 После того, как пользователь заполнил форму, необходимо выполнить запрос к серверу, который отдаст нам информацию о пользователе.    
 Чтобы выполнить данный запрос, необходимо создать сервис auth.service.    
-Ниже показано, какие файлы необходимо модифицировать или создать выполнения для этой задачи.
 
 - Создаем сервис для работы с сервером `src\app\auth\auth.service.ts`:
 ```js
@@ -52,7 +51,7 @@ export interface IUsers_back {
 - Добавляем в `src\app\auth\components\login\login.component.ts` обращение к сервису auth.service:
 ```js
 import { AuthService } from "../../auth.service";
-import { IUsers } from "./model/users.model";
+import { IUsers } from "../../model/users.model";
 import { tap } from "rxjs/operators";
 
 export class LoginComponent {
