--- a/!_lessons/10. NGRX. Добавление ngrx-store в auth.module.md
+++ b/!_lessons/10. NGRX. Добавление ngrx-store в auth.module.md
@@ -1,4 +1,4 @@
-## 06. Добавление ngrx-store в auth.module
+## 10. Добавление ngrx-store в auth.module
 
 `ng generate store auth/Auth --module auth.module.ts`
 
@@ -19,7 +19,8 @@ import * as fromAuth from './reducers';
 			// config reducers for our module
 			fromAuth.reducers, 
 
-			// next line should be deleted from this file, because it's not needed for feature module
+			// !!! 
+			// next line should be DELETED from this file, because it's not needed for feature module
 			{ metaReducers: fromAuth.metaReducers }
 		),
 	],
