--- a/!_lessons/02. Создание страницы авторизации.md
+++ b/!_lessons/02. Создание страницы авторизации.md
@@ -3,6 +3,7 @@
 ### 1. Создание auth-модуля
 
 Создаем файл _src\app\auth\auth.module.ts_, внутри которого создаем базовую структуру, которая должна существовать в каждом новом модуле:
+
 ```js
 import { NgModule } from "@angular/core";
 import { CommonModule } from "@angular/common";
@@ -12,9 +13,10 @@ import { CommonModule } from "@angular/common";
 export class AuthModule {}
 ```
 
-### 2. Регистрация auth-модуля внутри app-модуля:
+### 2. Регистрация auth-модуля внутри app-модуля
 
 Регистрируем auth.module.ts внутри app.module.ts:
+
 ```js
 import { AuthModule } from "./auth/auth.module";
 @NgModule({
@@ -26,6 +28,7 @@ import { AuthModule } from "./auth/auth.module";
 
 Создаем компоненту `src\app\auth\components\login\`, внутри которой создаем файлы: `login.component.ts, login.component.html, login.component.sass`  
 Внутри login.component.ts создаем базовую структуру, которая должна существовать в каждом новом компоненте:
+
 ```js
 import { Component } from "@angular/core";
 @Component({
@@ -35,11 +38,13 @@ import { Component } from "@angular/core";
 })
 export class LoginComponent {}
 ```
+
 Здесь стоит отметить, что строка `selector: 'nl-login'` содержит имя селектора с префиксом `nl`, что является сокращением от названия нашего приложения `ngrx-lessons`
 
-### 4. Регистрация login-компонента внутри auth-модуля:
+### 4. Регистрация login-компонента внутри auth-модуля
 
 Компоненты необходимо зарегистрировать в модуле, которому они принадлежат. Внутри auth.module.ts:
+
 ```js
 import { LoginComponent } from './components/login/login.component';
 @NgModule({
@@ -50,9 +55,10 @@ import { LoginComponent } from './components/login/login.component';
 ### 5. Регистрация роута login-компонента внутри его родителя - auth-модуля
 
 Внутри auth.module.ts:
+
 ```js
 import { Routes, RouterModule } from '@angular/router';
-import { LoginComponent } from './components/login/login.component';
+
 const authRoutes: Routes = [
   { path: '', component: LoginComponent },
 ];
@@ -61,10 +67,33 @@ const authRoutes: Routes = [
 })
 ```
 
-### 6. Рендер страниц с помощью router-outlet
+### 6. html + рендер страниц с помощью router-outlet
 
-router-outlet позволяет рендерить страницы. Для этого в app.component.html помещаем следующее:
+router-outlet позволяет рендерить страницы. Для этого в _app.component.html_ помещаем следующее:
+
 ```html
-<a routerLink="/login" routerLinkActive="active">1. login page</a> <br />
-<router-outlet></router-outlet>
+<nav>
+  <a routerLink="/" routerLinkActive="active">1. login page</a> <br />
+</nav>
+
+<div id="view">
+  <router-outlet></router-outlet>
+</div>
+```
+
+### 7. Базовые стили
+
+_src\app\app.component.sass_:
+
+```css
+nav
+	display: block
+	width: 200px
+	border-right: 2px solid red
+	position: absolute
+
+#view
+	display: block
+	position: absolute
+	left: 230px
 ```
