--- a/!_lessons/05. Создание страницы posts.md
+++ b/!_lessons/05. Создание страницы posts.md
@@ -1,6 +1,6 @@
-## 09. Переход на страницу posts
+## 05. Создание страницы posts
 
-После успешного выполнения запроса к серверу с помощью `auth.service`, мы получаем учетные данные пользователя: {index: 5, name: "Kamren", mail: "Lucio_Hettinger@annie.ca"}. Далее нам необходимо реализовать переход на страницу `posts`. Для этого нужно создать модуль **posts**:
+После успешного выполнения запроса к серверу с помощью `auth.service`, мы получаем учетные данные пользователя: {email: "Lucio_Hettinger@annie.ca", id: "5"}. Далее нам необходимо реализовать переход на страницу `posts`. Для этого нужно создать модуль **posts**:
 
 ### 1. Создание posts-модуля
 
@@ -29,6 +29,8 @@ export class PostsModule {
 ### 2. Реализация lazy-роутинга для posts-модуля внутри app-модуля
 
 ```js
+import { RouterModule, Routes } from '@angular/router';
+
 const routes: Routes = [
 	{ path: 'posts', loadChildren: () => import('./posts/posts.module').then(m => m.PostsModule) },
 	
@@ -56,3 +58,29 @@ import { Component } from "@angular/core";
 export class HomeComponent {}
 ```
 Здесь стоит отметить, что строка `selector: 'nl-home'` содержит имя селектора с префиксом `nl`, что является сокращением от названия нашего приложения `ngrx-lessons`
+
+### 4. Переход с login-страницы на posts-страницу
+
+Добавляем в _src\app\auth\components\login\login.component.ts_:
+
+```js
+import { Router } from "@angular/router"; // <--- 1
+
+constructor(
+	// ...
+	private router: Router, // <--- 2
+) { ... }
+
+login() {
+	// ...
+	this.auth.getData(val.email, val.id)
+		// ...
+		.subscribe(
+			(users) => {
+				// ...
+				this.router.navigateByUrl('/posts'); // <--- 3
+			},
+			// ...
+		);
+}
+```
