--- a/!_lessons/08. NGRX. Добавление store-devtools.md
+++ b/!_lessons/08. NGRX. Добавление store-devtools.md
@@ -1,4 +1,4 @@
-## 04. Добавление store-devtools
+## 08. Добавление store-devtools
 
 `ng add @ngrx/store-devtools@latest`
 
@@ -26,7 +26,7 @@ import { environment } from '../environments/environment';
 
 ## Установка расширения 'Redux DevTools' в Chrome-браузер для отладки приложения
 
-Теперь, если перейти во вкладку 'devtools --> state --> raw' мы увидим пустой объект:
+Необходимо установить 'Redux DevTools' и далее, если перейти во вкладку 'devtools --> state --> raw', мы увидим пустой объект:
 ```js
 {}
 ```
