--- a/!_lessons/04. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/04. Создание сервиса для обращения к серверу.md
@@ -53,6 +53,7 @@ export interface IUsers_back {
 import { AuthService } from "../../auth.service";
 import { IUsers } from "../../model/users.model";
 import { tap } from "rxjs/operators";
+import { noop } from "rxjs";
 
 export class LoginComponent {
 	user: IUsers;
@@ -69,12 +70,11 @@ export class LoginComponent {
 				// tap() используется для выполнения какого-либо действия; не изменяет исходного значения
 				tap(user => {
 					if (!user) throw new Error;
+					console.log('user data', user);
 				})
 			)
 			.subscribe(
-				(users) => {
-					this.user = users;
-				},
+				noop,
 				// Обработчик ошибки сработает в 2х случаях:
 				// - если юзер ввел некоректный id
 				// - если почта, которую ввел юзер, не соответствует почте, что пришла в ответе сервера
