--- a/!_lessons/05. Создание страницы posts.md
+++ b/!_lessons/05. Создание страницы posts.md
@@ -74,13 +74,12 @@ constructor(
 login() {
 	// ...
 	this.auth.getData(val.email, val.id)
-		// ...
-		.subscribe(
-			(users) => {
+		.pipe(
+			tap(user => {
 				// ...
 				this.router.navigateByUrl('/posts'); // <--- 3
-			},
-			// ...
-		);
+			})
+		)
+		// ...
 }
 ```
