--- a/!_lessons/08. NGRX. Добавление store-devtools.md
+++ b/!_lessons/08. NGRX. Добавление store-devtools.md
@@ -26,7 +26,7 @@ import { environment } from '../environments/environment';
 
 ## Установка расширения 'Redux DevTools' в Chrome-браузер для отладки приложения
 
-Необходимо установить 'Redux DevTools' и далее, если перейти во вкладку 'devtools --> state --> raw', мы увидим пустой объект:
+Необходимо установить 'Redux DevTools' и далее, если перейти во вкладку 'devtools --> Redux --> state --> raw', мы увидим пустой объект:
 ```js
 {}
 ```
