--- a/!_lessons/10. NGRX. Добавление ngrx-store в auth.module.md
+++ b/!_lessons/10. NGRX. Добавление ngrx-store в auth.module.md
@@ -44,7 +44,7 @@ import { environment } from '../../environments/environment';
 export const metaReducers: MetaReducer<State>[] = !environment.production ? [] : [];
 ```
 
-**Теперь, если перейти во вкладку 'devtools --> state --> raw' мы увидим следующее**:
+**Теперь, если перейти во вкладку 'devtools --> Redux --> state --> raw' мы увидим следующее**:
 ```js
 {
 	auth: {}
