--- a/!_lessons/11. NGRX. Action.md
+++ b/!_lessons/11. NGRX. Action.md
@@ -97,7 +97,7 @@ import { loginAction } from '../../auth.actions';
 - Находясь на странице авторизации заполняем форму и нажимаем кнопку Login
 - Переходим во вкладку 'devtools --> Redux' 
 - В левой части экрана мы увидим, что получен новый action - '[Login Page] User Login'
-- Нажав на него, во вкладке 'Action --> Raw' (в правой части экрана), мы увидим объект, который содержит данные, которые мы ввели в форму и тип нашего action:
+- Нажав на него, во вкладке 'Action --> Raw' (в правой части экрана), мы увидим объект, который содержит учетные данные пользователя, которые мы получили с сервера, а также тип нашего action:
 ```js
 {
   user: {
