--- a/!_lessons/11. NGRX. Action.md
+++ b/!_lessons/11. NGRX. Action.md
@@ -1,6 +1,6 @@
 ## 11. Action
 
-В уроке №5, после получения учетных данных пользователя в login.component, мы выполнили переход со страницы авторизации на страницу со списком постов.    
+В уроке #5, после получения учетных данных пользователя в login.component, мы выполнили переход со страницы авторизации на страницу со списком постов.    
 Теперь, после подключения ngrx к приложению, нам необходимо сохранить эти учетные данные пользователя в ngrx-store, так как они могут использоваться во многих местах приложения. Сохранение данных в ngrx-store необходимо выполнить перед переходом на страницу со списком постов. 
 
 ### 1. Подключение ngrx-store к login.component
@@ -46,7 +46,7 @@ export const metaReducers: MetaReducer<AppState>[] = !environment.production ? [
 			// )
 ```
 
-### 3. Создание action
+### 3. Создание 'login' action
 Объект action имеет два свойства:           
 - тип *type* (обязательное свойство) - строка, описывающая, что означает action            
 - полезная нагрузка *payload* (не обязательное свойство) - объект данных, которые могут понадобиться хранилищу для создания новой версии его внутреннего состояния   
@@ -114,4 +114,4 @@ import { loginAction } from '../../auth.actions';
   auth: {}
 }
 ```
-Так происходит потому, что задача action - проинформировать store, что что-то произошло на уровне компонента. А чтобы изменить состояние store, мы должны указать store как обрабатывать action. Об этом в следующем уроке.
+Так происходит потому, что задача action - проинформировать store, что что-то произошло на уровне компонента. А чтобы изменить состояние store, мы должны указать store как обрабатывать action. Об этом в уроке #13.
