--- a/!_lessons/11. NGRX. Action 1.md
+++ b/!_lessons/11. NGRX. Action 1.md
@@ -1,4 +1,4 @@
-## 11. Action
+## 11. Action 1
 
 В уроке #5, после получения учетных данных пользователя в login.component, мы выполнили переход со страницы авторизации на страницу со списком постов.    
 Теперь, после подключения ngrx к приложению, нам необходимо сохранить эти учетные данные пользователя в ngrx-store, так как они могут использоваться во многих местах приложения. Сохранение данных в ngrx-store необходимо выполнить перед переходом на страницу со списком постов. 
