--- a/!_lessons/12. NGRX. Action 2.md
+++ b/!_lessons/12. NGRX. Action 2.md
@@ -1,4 +1,4 @@
-## 12. Action-групировка 
+## 12. Action 2 
 
 Перед тем как мы научимся изменять состояние store (урок #13), в этом уроке мы создадим еще один action - logoutAction, который в будущем будет сообщать store, что пользователь вышел из учетной записи, а также научимся групировать логически связанные actions.         
 
@@ -18,8 +18,8 @@ export const logoutAction = createAction(
 
 ### 2. Action-групировка 
 
-Теперь мы имеем два разных action - loginAction и logoutAction, которые логически связаны с проверкой аунтефикации юзера. Хорошей практикой является групировать логически связанные действия, чтобы облегчить доступ к ним.   
-Для этой задачи создаем новый файл *src\app\auth\action-types.ts*:
+Теперь мы имеем два разных action - loginAction и logoutAction, которые логически связаны с проверкой аунтефикации юзера. Хорошей практикой является групировать логически связанные actions, чтобы облегчить доступ к ним.   
+Для этой задачи создаем новый файл *src\app\auth\action-types.ts* в который импортируем все actions в AuthActions, а затем экспортим AuthActions:
 ```js
 import * as AuthActions from './auth.actions';
 export { AuthActions };
@@ -30,14 +30,15 @@ export { AuthActions };
 Теперь все actions нашего приложения будут доступны из одного файла.   
 Изменим строку создания action в *src\app\auth\components\login\login.component.ts*:
 ```js
-import { loginAction } from '../../auth.actions'; // <--- Удалить
+// import { loginAction } from '../../auth.actions'; // <--- Удалить
 import { AuthActions } from '../../action-types'; // <--- Добавить
 
 login() {
 	// ...
 
-	const newLoginAction = loginAction({user: user}); // <--- Удалить
+	// const newLoginAction = loginAction({user: user}); // <--- Удалить
 	const newLoginAction = AuthActions.loginAction({user: user}); // <--- Добавить
 
 	// ...
+}
 ```
