--- a/!_lessons/04. Создание сервиса для обращения к серверу.md
+++ b/!_lessons/04. Создание сервиса для обращения к серверу.md
@@ -65,9 +65,8 @@ export class LoginComponent {
 		this.auth.getData(val.email, val.id)
 			.pipe(
 				// tap() используется для выполнения какого-либо действия; не изменяет исходного значения
-				tap(user => {
-					if (!user) throw new Error;
-					console.log('user data', user);
+				tap(userData => {
+					if (!userData) throw new Error;
 				})
 			)
 			.subscribe(
