--- a/!_lessons/05. Создание страницы posts.md
+++ b/!_lessons/05. Создание страницы posts.md
@@ -75,7 +75,7 @@ login() {
 	// ...
 	this.auth.getData(val.email, val.id)
 		.pipe(
-			tap(user => {
+			tap(userData => {
 				// ...
 				this.router.navigateByUrl('/posts'); // <--- 3
 			})
