--- a/!_lessons/11. NGRX. Action 1.md
+++ b/!_lessons/11. NGRX. Action 1.md
@@ -34,8 +34,8 @@ export const metaReducers: MetaReducer<AppState>[] = !environment.production ? [
 	// login() {
 	// 	this.auth.getData(val.email, val.id)
 	// 		.pipe(
-	// 			tap(user => {
-	// 				if (!user) throw new Error;
+	// 			tap(userData => {
+	// 				if (!userData) throw new Error;
 
 					  dispatch(
 						  // <--- здесь будет указан action
@@ -79,11 +79,11 @@ import { loginAction } from '../../auth.actions';
 // 	// ...
 // 	this.auth.getData(val.email, val.id)
 // 		.pipe(
-// 			tap(user => {
-// 				if (!user) throw new Error;
+// 			tap(userData => {
+// 				if (!userData) throw new Error;
 
 					// Создаем action
-					const newLoginAction = loginAction({user: user});
+					const newLoginAction = loginAction({user: userData});
 					// Отправляем action
 					this.store.dispatch(newLoginAction);
 
