--- a/!_lessons/12. NGRX. Action 2.md
+++ b/!_lessons/12. NGRX. Action 2.md
@@ -36,8 +36,8 @@ import { AuthActions } from '../../action-types'; // <--- Добавить
 login() {
 	// ...
 
-	// const newLoginAction = loginAction({user: user}); // <--- Удалить
-	const newLoginAction = AuthActions.loginAction({user: user}); // <--- Добавить
+	// const newLoginAction = loginAction({user: userData}); // <--- Удалить
+	const newLoginAction = AuthActions.loginAction({user: userData}); // <--- Добавить
 
 	// ...
 }
