--- a/!_lessons/07. NGRX-1. Добавление ngrx-store в app.module.md
+++ b/!_lessons/07. NGRX-1. Добавление ngrx-store в app.module.md
@@ -1,3 +1,6 @@
+# NGRX-1
+В этой части рассмотрено как добавить NGRX в проект.
+
 ## 07. Добавление ngrx-store в app.module
 
 `ng add @ngrx/store@latest --minimal false`
