--- a/!_lessons/11. NGRX-2. Action 1.md
+++ b/!_lessons/11. NGRX-2. Action 1.md
@@ -1,3 +1,6 @@
+# NGRX-2
+В этой части рассмотрено что такое Action и Reducer.
+
 ## 11. Action 1
 
 В уроке #5, после получения учетных данных пользователя в login.component, мы выполнили переход со страницы авторизации на страницу со списком постов.    
