--- a/!_lessons/14. NGRX-2. Итог 2-й части.md
+++ b/!_lessons/14. NGRX-2. Итог 2-й части.md
@@ -36,7 +36,7 @@ export interface IUsers {
     index: 5,
     name: 'Kamren',
     mail: 'Lucio_Hettinger@annie.ca'
-	}
+  }
 }
 ```
 
@@ -76,8 +76,9 @@ login() {
 
 ### 4. Изменяем состояние store с помощью reducer           
 Далее необходимо изменить состояние store. Для этого нужно описать, что должен делать store, когда он получил action. Для этого мы создадим **reducer** — это функция, принимающая два аргумента - предыдущее состояние (state) и действие (action), и которая возвращает хранилищу (store) новую версию состояния. 
-
+*src\app\auth\reducers\index.ts:*
 ```js
+// Определяем начальное значение стейта
 export const initialAuthState: AuthState = { user: undefined };
 
 // C помощью ngrx-метода createReducer() создаем редюсер:
