--- a/!_lessons/07. NGRX-1. Добавление ngrx-store в app.module.md
+++ b/!_lessons/07. NGRX-1. Добавление ngrx-store в app.module.md
@@ -1,5 +1,5 @@
 # NGRX-1
-В этой части рассмотрено как добавить NGRX в проект.
+В этой части будет рассмотрено как добавить NGRX в проект.
 
 ## 07. Добавление ngrx-store в app.module
 
