--- a/!_lessons/11. NGRX-2. Action 1.md
+++ b/!_lessons/11. NGRX-2. Action 1.md
@@ -1,5 +1,5 @@
 # NGRX-2
-В этой части рассмотрено что такое Action и Reducer.
+В этой части будет рассмотрено как добавить данные в store, что такое Action и Reducer.
 
 ## 11. Action 1
 
