--- a/!_lessons/15. NGRX-3. Получение данных из store.md
+++ b/!_lessons/15. NGRX-3. Получение данных из store.md
@@ -1,16 +1,21 @@
-import { Component, OnInit } from '@angular/core';
+# NGRX-3
+В этой части будет рассмотрено как получать данные из store, что такое selector, effect.
+
+## 15. Получение данных из store
+
+Кнопки в меню LOG-IN и LOG-OUT должны отображаться в зависимости от наличия свойства "auth.user" в store:
+- Показываем LOG-IN  - если юзер не авторизирован
+- Показываем LOG-OUT - если юзер авторизирован
+
+Добавляем в *src\app\app.component.ts*:   
+```js
+import { OnInit } from '@angular/core';
 import { Observable } from 'rxjs';
 import { Store } from '@ngrx/store';
 import { AppState } from './reducers/index'
 import { map } from 'rxjs/operators';
 
-@Component({
-  selector: 'app-root',
-  templateUrl: './app.component.html',
-  styleUrls: ['./app.component.sass']
-})
 export class AppComponent implements OnInit {
-
 	// Переменные, в зависимости от которых будут отображаться кнопки LOG-IN и LOG-OUT
 	isLoggedIn$: Observable<boolean>;
 	isLoggedOut$: Observable<boolean>;
@@ -39,3 +44,21 @@ export class AppComponent implements OnInit {
 			);
 	}
 }
+```
+
+Добавляем в *src\app\app.component.html*:
+```html
+<nav>
+	<a class="menu-item" 
+		routerLink="/" routerLinkActive="active"
+		*ngIf='isLoggedOut$ | async'
+	>LOG-IN</a> <br />
+
+	<a class="menu-item"  
+		(click)="logout()"
+		*ngIf='isLoggedIn$ | async'
+	>LOG-OUT</a> <br />
+</nav>
+```
+
+В следующем уроке будет рассмотрен другой способ получение данных из Store, более эфективный, с помощью selector.
