--- a/!_lessons/16. NGRX-3. Selector.md
+++ b/!_lessons/16. NGRX-3. Selector.md
@@ -1,6 +1,6 @@
-## 16. Select
+## 16. Selector
 
-**Селектор** - функция, которая используется для получения отдельных частей глобального состояния.    
+**Селектор** - функция с памятью (см. пункт 3), которая используется для получения отдельных частей глобального состояния.    
 Селектор создается с помощью NgRx-функции **createSelector()**, которая может принимать неограниченное количество функций-аргументов, каждая из которых возвращает отдельную часть состояния. Самая последняя функция-аргумент - принимает в качестве аргументов результат работы первых функций, и возвращает конечный результат. 
 
 ### 1. Создание селектора - isLoggedIn
