--- a/!_lessons/11. NGRX-2. Action 1.md
+++ b/!_lessons/11. NGRX-2. Action 1.md
@@ -49,7 +49,7 @@ export const metaReducers: MetaReducer<AppState>[] = !environment.production ? [
 			// )
 ```
 
-### 3. Создание 'login' action
+### 3. Создание 'loginAction' action
 Объект action имеет два свойства:           
 - тип *type* (обязательное свойство) - строка, описывающая, что означает action            
 - полезная нагрузка *payload* (не обязательное свойство) - объект данных, которые могут понадобиться хранилищу для создания новой версии его внутреннего состояния   
