--- a/!_lessons/18. NGRX-3. Кнопка LOG-OUT.md
+++ b/!_lessons/18. NGRX-3. Кнопка LOG-OUT.md
@@ -1,4 +1,4 @@
-## 18. Функционал кнопки LOG-OUT
+## 18. Кнопка LOG-OUT
 
 В этом уроке мы реализуем функционал кнопки LOG-OUT в меню нашего приложения: нажимая на кнопку - удаляем профайл пользователя из store.    
 Чтобы удалить данные из store, сперва его нужно проинформировать, что что-то произошло на уровне app-компонента, в котором находится кнопка. Для этого, компонент должен отправить в store объект action, который опишет что произошло в компоненте. Далее reducer обработает action и вернет хранилищу (store) новую версию состояния. 
