--- a/!_lessons/22. NGRX-3. Создание effect - best way.md
+++ b/!_lessons/22. NGRX-3. Создание effect - best way.md
@@ -3,9 +3,9 @@
 В этом уроке мы перепишем работу с эффектами, используя rxjs-метод **createEffect()** [ https://ngrx.io/api/effects/createEffect ]. 
 
 *Создание эффектов с помощью  createEffect() является самым лучшим решением при работе с эффектами, поскольку решение, описанное в предыдущем уроке, имеет несколько минусов:*
-1. В случаи созникновения ошибок в observable - не происходит автоматический перезапуск, и поэтому операции, описанные внутри observable - могут не быть выполненными
+1. В случаи созникновения ошибок в observable - не происходит автоматический перезапуск, и поэтому операции, описанные внутри observable - могут быть не выполненными
 2. Необходимо вручную выполнять подписку subscribe()
-3. При обращении к данным из action, ngrx не знал какие данные там хранятся, и поэтому обращение выполнялось таким способом: `action['user']`, чтобы избежать ошибок. Работая с createEffect(), мы можем использовать `action.user`
+3. При обращении к данным из action, ngrx не знал какие данные там хранятся, и поэтому обращение выполнялось таким способом: `action['user']`, чтобы избежать ошибок. Работая с createEffect(), мы можем обращаться как `action.user`
 
 *src\app\auth\auth.effects.ts*:
 ```js
@@ -14,20 +14,20 @@ import { tap } from 'rxjs/operators';
 
 export class AuthEffects {
 
-		login$ = createEffect( 
-			() => this.action$.pipe(
+	login$ = createEffect( 
+		() => this.action$.pipe(
 
-				// ofType - используется для фильтрации действий по их типу
-				ofType(AuthActions.loginAction),
+			// ofType - используется для фильтрации действий по их типу
+			ofType(AuthActions.loginAction),
 
-				tap(action => {
-					localStorage.setItem('user', JSON.stringify(action.user));
-				})
-			),
+			tap(action => {
+				localStorage.setItem('user', JSON.stringify(action.user));
+			})
+		),
 
-			// Указываем, что данный эффект не возвращает action
-			{ dispatch: false }
-		);
+		// Указываем, что данный эффект не возвращает action
+		{ dispatch: false }
+	);
 
 	constructor(private action$: Actions){
 		// Очищаем конструктор. Теперь создание эффекта нужно выполнять за его пределами
