--- a/!_lessons/22. NGRX-3. Создание effect - best way.md
+++ b/!_lessons/22. NGRX-3. Создание effect - best way.md
@@ -14,6 +14,7 @@ import { tap } from 'rxjs/operators';
 
 export class AuthEffects {
 
+  // createEffect() - принимает функцию, которая возвращает observable
 	login$ = createEffect( 
 		() => this.action$.pipe(
 
