--- a/!_lessons/23. NGRX-3. Logout effect.md
+++ b/!_lessons/23. NGRX-3. Logout effect.md
@@ -1,4 +1,4 @@
-## 23. 
+## 23. Logout effect
 
 ### 1. Создание logout эффекта
 
@@ -35,14 +35,14 @@ export class AuthEffects {
 Если юзер залогинился - данные попали в store и localstorage. Но при обновлении страницы, данные в store - автоматически удалятся, а данные в localstorage - останутся. Наша задача - проверить localstorage, и если там есть данные - добавить их в store.    
 *src\app\app.component.ts*:
 ```js
-	ngOnInit() {
-		const userProfile = localStorage.getItem('user');
-		if (userProfile) {
-			this.store.dispatch(AuthActions.loginAction(
-				{ user: JSON.parse(userProfile) }
-			));
-		}
-
-		// ...
+ngOnInit() {
+	const userProfile = localStorage.getItem('user');
+	if (userProfile) {
+		this.store.dispatch(AuthActions.loginAction(
+			{ user: JSON.parse(userProfile) }
+		));
 	}
+
+	// ...
+}
 ```
