--- a/!_lessons/24. NGRX-4. Router Store и Time-Travelling Debugger.md
+++ b/!_lessons/24. NGRX-4. Router Store и Time-Travelling Debugger.md
@@ -1,4 +1,4 @@
-## 24. Настройка Router Store и Time-Travelling Debugger
+## 24. Router Store и Time-Travelling Debugger
 
 **Time-Travelling Debugger** - это слайдер, который находится в DevTools, с помощью которого можно перемещаться по истории Actions, отслеживая как изменяется состояние приложения.   
 В сочетании с **Router Store** - *Time-Travelling Debugger* позволяет отслеживать процесс смены URL, перемещаясь по истории Actions.
