--- a/!_lessons/27. Отображение всех постов и выбранного поста.md
+++ b/!_lessons/27. Отображение всех постов и выбранного поста.md
@@ -70,15 +70,15 @@ import { PostsService } from '../../posts.service';
 export class PostComponent {
 	post$: Observable<IPost>;
 
-  constructor(
+	constructor(
 		private route: ActivatedRoute,
-    private postsService: PostsService
+		private postsService: PostsService
 	) {}
-	
+
 	ngOnInit() {
 		const postId = this.route.snapshot.paramMap.get("postId");
 		this.post$ = this.postsService.findPostById(postId);
-  }
+	}
 }
 ```
 
@@ -102,7 +102,7 @@ findPostById(postId: string): Observable<IPost> {
 
 ### 3. Подключение новых компонентов в posts.module + создание роута для страницы "post"
 
-*src\app\posts\posts.module.ts*
+Добавляем в *src\app\posts\posts.module.ts*:
 ```js
 import { PostsCardListComponent } from './components/posts-card-list/posts-card-list.component';
 import { PostComponent } from './components/post/post.component';
