--- a/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
+++ b/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
@@ -1,4 +1,4 @@
-## 28. resolver, actions, effect, reducer для posts-страницы
+## 28. resolver, actions, effect для posts-страницы
 
 На данный момент, **при каждом переходе на страницу *posts*, происходит обращение к серверу**, чтобы получить данные всех постов. Такая логика является не правильной, поскольку пользователь, находясь на странице *posts*, может переходить с неё на страницу выбранного поста и возвращаться обратно назад много раз, что будет приводить к большой нагрузке на сервер. Чтобы исправить такое поведение, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера данные в *store*, и при всех последующих переходах, считывать данные из *store*.
 
@@ -200,13 +200,4 @@ export { PostsActions };
 	![](./img/28.1.png)     
 	Если же мы переключимся во вкладку 'State --> Tree', то мы увидим только раннее сохраненные данные:     
 	![](./img/28.2.png)      
-	Так происходит потому, что задача action - проинформировать store, что что-то произошло на уровне компонента. А чтобы изменить состояние store, мы должны добавить в приложение редюсер. Об этом далее.
-
-### 9. Создание редюсера для posts-страницы
-
-Создаем новый файл *src\app\posts\reducers\posts.reducers.ts*:
-
-УРОК 29
-
-`npm i @ngrx/entity --save`
-https://xsltdev.ru/angular/ngrx/entity-state/
+	Так происходит потому, что задача action - проинформировать store, что что-то произошло на уровне компонента. А чтобы изменить состояние store, мы должны добавить в приложение редюсер, который и сохранит данные в store.
