--- a/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
+++ b/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
@@ -32,6 +32,7 @@ interface EntityState<V> {
 				id: 1,
 				description: "Angular for Beginners",                                          
 			},
+		}
 	},
 	lessons: {
 		ids: [1, ... 35],
@@ -118,3 +119,10 @@ import { StoreModule } from '@ngrx/store';
 	// ...
 })
 ```
+
+### 6. Проверяем, что состояние store изменилось
+
+Переходим во вкладку 'devtools --> Redux --> State --> Raw':    
+
+![](./img/29.1.png)
+
