--- a/!_lessons/06. Отображение данных на странице posts.md
+++ b/!_lessons/06. Отображение данных на странице posts.md
@@ -56,6 +56,7 @@ import { IPost } from "../../model/post.model";
 
 export class HomeComponent {
 	allPosts$: Observable<IPost[]>;
+	numb: number;
 
 	constructor(
 		private postsService: PostsService,
@@ -69,6 +70,9 @@ export class HomeComponent {
 		this.allPosts$ = this.postsService.findAllPosts().pipe(
 			tap(post => {
 				console.log('all posts ==>', post);
+
+				// В this.numb получаем колличество четных постов 
+				this.numb = post.filter((item, i, arr) => i % 2 === 0).length;
 			})
 		)
 	}
@@ -79,6 +83,8 @@ export class HomeComponent {
 
 Добавляем в _src\app\posts\components\home\home.component.html_:
 ```html
+<h1>Колличество парных постов: {{ numb }}</h1>
+
 <div *ngFor='let x of allPosts$  | async'>
 	<hr>
 	User {{ x.userId }} : {{ x.title }}
