--- a/!_lessons/27. Отображение всех постов и выбранного поста.md
+++ b/!_lessons/27. Отображение всех постов и выбранного поста.md
@@ -25,14 +25,16 @@ import { IPost } from "../../model/post.model";
 })
 
 export class PostsCardListComponent {
-	// Получаем значение переменной allPosts из home.component
-	@Input()
-	allPosts: IPost[]
+	// Получаем значение переменных allPosts и postsNumb из home.component
+	@Input() allPosts: IPost[];
+	@Input() postsNumb: number;
 }
 ```
 
 2. posts-card-list.component.html:
 ```html
+<h1>Всего {{ postsNumb }} постов</h1>
+
 <div *ngFor='let post of allPosts'>
 	<hr>
 	TITLE: {{ post.title }}
@@ -44,9 +46,10 @@ export class PostsCardListComponent {
 
 Поскольку отображение постов перенесли из *home.component* в *posts-card-list.component*, то изменяем файл *src\app\posts\components\home\home.component.html*:
 ```html
-<!-- Передаем значение переменной allPosts$ из *home.component* в *posts-card-list.component* -->
+<!-- Передаем значения переменных allPosts$ и numb из *home.component* в *posts-card-list.component* -->
 <nl-posts-card-list
 	[allPosts]="allPosts$ | async"
+	[postsNumb]="numb"
 >
 ```
 
