--- a/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
+++ b/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
@@ -122,7 +122,7 @@ import { StoreModule } from '@ngrx/store';
 
 ### 6. Проверяем, что состояние store изменилось
 
-Переходим во вкладку 'devtools --> Redux --> State --> Raw':    
+Переходим во вкладку 'devtools --> Redux --> State':    
 
 ![](./img/29.1.png)
 
