--- a/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
+++ b/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
@@ -1,9 +1,8 @@
 ## 30. Извлечение постов с помощью selectors 
 
-Как было описанно ранее в уроке 28, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера посты в *store*, и при всех последующих переходах, считывать данные из *store*.    
-Перепишем логику получения постов из сервера и их сохранение в store в Entity State формате.    
+Как было описанно ранее в уроке 28, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера посты в *store*, и при всех последующих переходах, считывать данные из *store*.       
 
-Вместо того, чтобы использовать HTTP-сервисы для получения постов от сервера, мы будем использовать селекторы, с помощью которых мы будем получать информацию из store.
+Вместо того, чтобы каждый раз использовать HTTP-сервисы для получения постов от сервера, когда в store уже хранятся эти данные, мы будем использовать селекторы, с помощью которых мы будем получать посты из store.
 
 ### 1. Создание селекторов 
 
@@ -135,6 +134,6 @@ export class HomeComponent {
 ```js
 // <nl-posts-card-list
 // 	[allPosts]="allPosts$ | async"
-	  [postsNumb]="numb$ | async"
+	[postsNumb]="numb$ | async"
 // >
 ```
