--- a/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
+++ b/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
@@ -63,6 +63,10 @@ interface EntityState<V> {
 **Adapter** - это класс, который предоставляет ряд функций, которые упрощают управление entity state в store.   
 Адаптер позволяет гораздо проще создавать: начальное состояние сущности, редукторы, селекторы, выполнять CRUD операции в store, сохраняя нашу сущность в формате EntityState.
 
+> Конфигурация адаптера:  
+> Lection 32. Entity Adapter Configuration - Understanding sortComparer and selectId
+> https://www.udemy.com/course/ngrx-course/learn/lecture/15942426#overview
+
 ### 4. Создание postsReducer для posts-страницы
 
 Создаем новый файл, который будет содержать редюсер *src\app\posts\reducers\posts.reducers.ts*:
