--- a/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
+++ b/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
@@ -1,6 +1,6 @@
 ## 30. Извлечение постов с помощью selectors 
 
-Как было описанно ранее в уроке 28, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера посты в *store*, и при всех последующих переходах, считывать данные из *store*.       
+Как было описанно ранее в уроке 28, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера посты (*src\app\posts\posts.effects.ts*) в *store*, и при всех последующих переходах, считывать данные из *store*.        
 
 Вместо того, чтобы каждый раз использовать HTTP-сервисы для получения постов от сервера, когда в store уже хранятся эти данные, мы будем использовать селекторы, с помощью которых мы будем получать посты из store.
 
